--- a/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/saved-searches.hbs
@@ -23,7 +23,7 @@
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
             <span class="mdc-list-item__text">
-              <strong>Add to email</strong>
+              <strong>Include in email</strong>
             </span>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1-desktop mdc-layout-grid__cell--span-1-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
@@ -76,11 +76,11 @@
               </span>
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-1-phone saved-search-email-switch">
-              {{#> ajax_chip 
+              {{#> ajax_chip
                 onUrl="/toggle-subscription"
                 offUrl="/toggle-subscription"
-                onText="Added to email"
-                offText="Add to email"
+                onText="Email"
+                offText="Email"
                 onMethod="POST"
                 offMethod="POST"
                 iconClasses="far fa-envelope"
