--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -527,7 +527,18 @@ a:hover {
   background-color: $mdc-theme-secondary-light;
   color: $mdc-theme-primary-dark;
 }
-.mdc-card .mdc-chip-set {
+.mdc-chip.mdc-chip--selected {
+  background-color: $mdc-theme-primary;
+  color: white;
+}
+.mdc-chip.mdc-chip--selected:hover {
+  background-color: $mdc-theme-primary-dark;
+  color: white;
+}
+.mdc-chip .mdc-chip__checkmark-path {
+  stroke: white !important;
+}
+// .mdc-card .mdc-chip-set {
   .mdc-chip {
     margin: 0;
     color: rgba(0, 0, 0, 0.54);
@@ -541,7 +552,7 @@ a:hover {
     background-color: $mdc-theme-primary;
     color: white;
   }
-}
+// }
 
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
@@ -987,15 +998,15 @@ hr {
         }
       }
     }
-    .mdc-card__action--shortlist .fa-heart {
-      color: $mdc-theme-primary-dark;
-    }
+    // .mdc-card__action--shortlist .fa-heart {
+    //   color: $mdc-theme-primary-dark;
+    // }
     .mdc-chip .mdc-chip__checkmark-path {
-      stroke: $mdc-theme-primary-dark;
+      stroke: white;
     }
-    .mdc-card__action--shortlist:hover .fa-heart {
-      font-weight: 900;
-    }
+    // .mdc-card__action--shortlist:hover .fa-heart {
+    //   font-weight: 900;
+    // }
   }
 }
 .mdc-card.vacancy-shortlisted {
