--- a/sites/configurations/goodmoves/partials/ajax-chip.hbs
+++ b/sites/configurations/goodmoves/partials/ajax-chip.hbs
@@ -22,7 +22,7 @@
     <span class="{{../iconClasses}} mdc-chip__icon mdc-chip__icon--leading {{if ../on "mdc-chip__icon--leading-hidden"}}" aria-hidden="true"></span>
     <div class="mdc-chip__checkmark">
       <svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
-        <path class="mdc-chip__checkmark-path" fill="none" stroke="#244817" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
+        <path class="mdc-chip__checkmark-path" fill="none" stroke="#ffffff" d="M1.73,12.91 8.1,19.28 22.79,4.59"/>
       </svg>
     </div>
     <div class="mdc-chip__text noselect">{{if ../on ../onText else=../offText}}</div>
