--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -1020,12 +1020,14 @@ hr {
     }
   }
 }
-.removed-from-shortlist {
-  opacity: 0.75;
-}
-.removed-from-shortlist::after,
-.removed-from-shortlist:hover::after {
-  opacity: 0.25 !important;
+body.shortlist {
+  .removed-from-shortlist {
+    opacity: 0.75;
+  }
+  .removed-from-shortlist::after,
+  .removed-from-shortlist:hover::after {
+    opacity: 0.25 !important;
+  }
 }
 
 .mdc-form-field,
