--- a/sites/configurations/goodmoves/templates/account/register.hbs
+++ b/sites/configurations/goodmoves/templates/account/register.hbs
@@ -13,17 +13,8 @@
           <div class="middle-line-text">
             <span>Continue with</span>
           </div>
-          <div class="button-row">
-            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-google" type="button">
-              <span class="fa fa-google"></span> Google
-            </button>
-            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
-              <span class="fa fa-twitter"></span> Twitter
-            </button>
-            <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
-              <span class="fa fa-facebook"></span> Facebook
-            </button>
-          </div>
+          
+          {{> social_login loaderSelector="#register-loader" messageSelector="#register-message"}}
 
           <div class="middle-line-text">
             <span>Or register with an email address</span>
@@ -88,9 +79,6 @@
       var $passwordConfirm = $('#register-password-confirm');
       var $register = $('#register-submit');
       var $loader = $('#register-loader');
-      var $google = $('#continue-with-google');
-      var $twitter = $('#continue-with-twitter');
-      var $facebook = $('#continue-with-facebook');
       
       $form.on('submit', function(evt) {
         $loader.css('display', 'flex');
@@ -124,28 +112,6 @@
             $loader.css('display', 'none');
           }
         }).catch(function(err) {
-          $message.text(err.message).show();
-          $loader.css('display', 'none');
-        });
-      });
-
-      $google.on('click', function(evt) {
-        var provider = new firebase.auth.GoogleAuthProvider();
-        provider.addScope('email');
-        goodmoves.app.auth().signInWithPopup(provider).then(function(result) {
-          if (result) {
-            console.log('Registered user:', result);
-            result.user.getIdTokenResult().then(function(idTokenResult) {
-              console.log('ID Token Result', idTokenResult);
-              goodmoves.setCookie('gm_token', idTokenResult.token, 7);
-              window.location.href = '/';
-            });
-          } else {
-            $message.text('Something went wrong, registerd but no user?').show();
-            $loader.css('display', 'none');
-          }
-        }).catch(function(err) {
-          console.error('GOOGLE ERROR:', err);
           $message.text(err.message).show();
           $loader.css('display', 'none');
         });
