--- a/sites/configurations/goodmoves/partials/organisation/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/organisation/search-result.hbs
@@ -13,13 +13,9 @@
     </div>
     {{/if ~}}
   </div>
-  <hr class="mdc-list-divider" />
-  {{#if description ~}}
   <div class="search-result-article__snippet mdc-typography--body1">
-    {{{description}}}
+    {{{og_summary}}}
   </div>
-  <hr class="mdc-list-divider" />
-  {{/if}}
   <div class="mdc-card__actions">
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
       <a href="/organisation/{{slug}}" class="mdc-card__action">Find out more</a>
