--- a/sites/configurations/goodmoves/partials/shortlist-chip.hbs
+++ b/sites/configurations/goodmoves/partials/shortlist-chip.hbs
@@ -10,7 +10,7 @@
   {
     "extraAttributes": "data-vacancy-id=\"{{../id}}\"",
     "onClasses": {
-      ".mdc-card[data-vacancy-id=\"{{../id}}\"]": "mdc-elevation--z15"
+      ".mdc-card[data-vacancy-id=\"{{../id}}\"]": "added-to-shortlist"
       },
     "offClasses": {
       ".mdc-card[data-vacancy-id=\"{{../id}}\"]": "removed-from-shortlist"
