--- a/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
+++ b/sites/configurations/goodmoves/templates/vacancies/shortlist.hbs
@@ -5,7 +5,7 @@
     Shortlist
   </h1>
 
-  {{#each data.search_data.detailed_results.hits.hits ~}}
+  {{#each data.search_data.shortlist.hits.hits ~}}
   {{> vacancy_search_result _source}}
   {{/each ~}}
 
