--- a/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
+++ b/sites/configurations/goodmoves/partials/vacancy/search-result.hbs
@@ -1,4 +1,4 @@
-<div class="mdc-card search-result" data-vacancy-id="{{Id}}">
+<div class="mdc-card search-result {{if top_job "top-job"}}" data-vacancy-id="{{Id}}">
   {{> vacancy_key_info}}
   <hr class="mdc-list-divider" />
   {{#if description_short ~}}
@@ -11,7 +11,7 @@
     <div class="mdc-card__action-buttons demo-card__action-buttons--text-only mdc-card__actions--full-bleed">
       <a href="/vacancy/{{slug}}{{@root.request.url.search}}" class="mdc-card__action">Find out more</a>
     </div>
-    <div class="mdc-card__action-icons mdc-chip-set pull-right">
+    <div class="mdc-card__action-icons pull-right">
       {{> shortlist_chip id=Id}}
     </div>
   </div>
