--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -86,30 +86,32 @@
     </div>
   </div>
 
-  <div class="mdc-layout-grid equal-height home-jobs home-shortlist">
-    <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
-        <div class="mdc-typography--headline5">
-          Your shortlist
+  {{#if data.auth}}
+    <div class="mdc-layout-grid equal-height home-jobs home-shortlist">
+      <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+          <div class="mdc-typography--headline5">
+            Your shortlist
+          </div>
         </div>
       </div>
-    </div>
-    <div class="mdc-layout-grid__inner">
-      {{#compare data.supplimentaryResponses.shortlist.hits.total ">" 0}}
-      {{#each data.supplimentaryResponses.shortlist.hits.hits ~}}
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
-        {{> vacancy_mini _source}}
+      <div class="mdc-layout-grid__inner">
+        {{#compare data.supplimentaryResponses.shortlist.hits.total ">" 0}}
+        {{#each data.supplimentaryResponses.shortlist.hits.hits ~}}
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone shortlist-jobs">
+          {{> vacancy_mini _source}}
+        </div>
+        {{/each ~}}
+        {{else}}
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
+          <p>
+            There are currently no jobs in your shortlist, if you shortlist a job it will appear here for easy reference.
+          </p>
+        </div>
+        {{/compare}}
       </div>
-      {{/each ~}}
-      {{else}}
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
-        <p>
-          There are currently no jobs in your shortlist, if you shortlist a job it will appear here for easy reference.
-        </p>
-      </div>
-      {{/compare}}
     </div>
-  </div>
+  {{/if}}
 
   <div class="mdc-layout-grid equal-height home-jobs home-latest">
     <div class="mdc-layout-grid__inner">
