--- a/sites/configurations/goodmoves/partials/social-login.hbs
+++ b/sites/configurations/goodmoves/partials/social-login.hbs
@@ -1,12 +1,12 @@
 <div class="button-row">
-  <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-google" type="button">
-    <span class="fa fa-google"></span> Google
+  <button class="mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-google" type="button">
+    <span class="fab fa-google fa-2x"></span> Continue with Google
   </button>
-  <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
-    <span class="fa fa-twitter"></span> Twitter
+  <button class="mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-twitter" type="button">
+    <span class="fab fa-twitter fa-2x"></span> Continue with Twitter
   </button>
-  <button class="mdc-button mdc-button--raised mdc-button--large mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
-    <span class="fa fa-facebook"></span> Facebook
+  <button class="mdc-button mdc-ripple-surface mdc-ripple-surface--primary" id="continue-with-facebook" type="button">
+    <span class="fab fa-facebook fa-2x"></span> Continue with Facebook
   </button>
 </div>
 
