--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -369,12 +369,52 @@ footer h3,
   background-color: $mdc-theme-primary;
 }
 
-.login-form, .register-form{
+.login-form,
+.register-form {
+  max-width: 40vw;
   margin: 10vh auto;
+  .middle-line-text {
+    margin: $unit*2 0 $unit;
+    border-bottom: 2px solid #dfdfdf;
+    line-height: 0;
+    text-align: center;
+    vertical-align: middle;
+    span {
+      background-color: $mdc-theme-secondary-light;
+      padding: $unit;
+      color: #555;
+    }
+  }
+  .mdc-button {
+    position: relative;
+    display: block;
+    margin-bottom: $unit/2;
+    width: 100%;
+    color: white;
+    width: 100%;
+    color: white;
+    line-height: $unit*3;
+    height: $unit*3;
+    .fa-2x {
+      position: absolute;
+      top: .6rem;
+      left: .5rem;
+    }
+  }
+  #continue-with-google {
+    background-color: #dd4b39;
+  }
+  #continue-with-twitter {
+    background-color: #0084b4;
+  }
+  #continue-with-facebook {
+    background-color: #3b5998;
+  }
   .mdc-card {
     position: relative;
   }
-  #login-message, #register-message {
+  #login-message,
+  #register-message {
     display: none;
   }
 }
@@ -383,12 +423,13 @@ footer h3,
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: $mdc-theme-complimentary-light;
+  background-color: $mdc-theme-secondary-light;
   opacity: 0.7;
   display: none;
   align-items: center;
   justify-content: center;
   .card-loader-inner {
+    color: $mdc-theme-primary;
   }
 }
 
@@ -731,23 +772,33 @@ a {
     }
   }
 }
+.mdc-card.list,
+.mdc-card.mini,
+.mdc-card.gist,
 .mdc-card.search-result {
-  border-top: $unit/4 solid #42842A;
+  border-top: $unit/3 solid $mdc-theme-complimentary;
   .mdc-card__info--vacancy-row {
+    padding-top: $unit/4;
     padding-bottom: 0;
   }
 }
+.mdc-card.list.top-job,
+.mdc-card.mini.top-job,
+.mdc-card.gist.top-job,
 .mdc-card.search-result.top-job {
-  border-top: $unit/2 solid #42842A;
+  border-top-color: $mdc-theme-primary;
   .mdc-card__info--vacancy-row {
-    padding-bottom: $unit/2;
+    // padding-bottom: $unit/2;
   }
   .search-result-article__snippet {
-    padding: $unit;
-    background-color: $mdc-theme-complimentary-light;
+    // padding: $unit;
+    // background-color: $mdc-theme-complimentary-light;
   }
   .mdc-card__actions {
-    background-color: $mdc-theme-complimentary;
+    background-color: $mdc-theme-primary;
+    .mdc-card__action {
+      color: white;
+    }
   }
 }
 
@@ -1231,9 +1282,9 @@ body {
         text-align: center;
         white-space: nowrap;
         vertical-align: baseline;
-        color: $mdc-theme-secondary-dark;
-        background-color: $mdc-theme-secondary !important;
         border-radius: $unit;
+        background-color: $mdc-theme-primary !important;
+        color: white;
         position: relative;
         top: -2px;
         left: 0;
@@ -1963,28 +2014,6 @@ footer.mdc-layout__footer {
 }
 .mdc-tab-bar--left {
   margin: 0;
-}
-
-.middle-line-text {
-  border-bottom: 1px solid $mdc-theme-primary-light;
-  line-height: 0;
-  text-align: center;
-  vertical-align: middle;
-
-  span {
-    background-color: #f5f5f5;
-    padding: $unit;
-  }
-}
-
-.button-row {
-  display: flex;
-  flex-direction: row;
-  margin: $unit 0;
-
-  button {
-    flex: 1;
-  }
 }
 
 @include mdc-switch-knob-color($mdc-theme-primary);
