--- a/sites/configurations/goodmoves/templates/pages/home-foot.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home-foot.hbs
@@ -1,4 +1,5 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.js"></script>
 <script>
 var terms = {
   sectors: [
