--- a/sites/configurations/goodmoves/templates/pages/home.hbs
+++ b/sites/configurations/goodmoves/templates/pages/home.hbs
@@ -104,11 +104,11 @@
           {{> vacancy_mini _source}}
         </div>
         {{/each ~}}
-        <div class="scroll-left">
-          <span class="far fa-angle-left fa-5x"></span>
+        <div class="scroll-button scroll-left">
+          <span class="fas fa-chevron-circle-left fa-3x"></span>
         </div>
-        <div class="scroll-right">
-          <span class="far fa-angle-right fa-5x"></span>
+        <div class="scroll-button scroll-right">
+          <span class="fas fa-chevron-circle-right fa-3x"></span>
         </div>
         {{else}}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone v-margin-full">
